--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -5185,17 +5185,17 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>763 85 445 77 0 0 1440 878 </string>
+	<string>666 559 445 77 0 0 1680 1028 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>610 327 700 622 0 0 1920 1058 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>600 464 606 469 0 0 1920 1058 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>258 570 796 473 0 0 1920 1058 </string>
+	<string>203 457 918 492 0 0 1680 1028 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>99 294 592 584 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 0 1920 1058 0 0 1920 1058 </string>
+	<string>0 6 1678 1022 0 0 1680 1028 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>749 608 570 450 0 0 1920 1058 </string>
 	<key>New Bookmarks</key>
@@ -5208,157 +5208,161 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.070588238537311554</real>
+				<real>0.12941177189350128</real>
 				<key>Green Component</key>
-				<real>0.070588238537311554</real>
+				<real>0.12941177189350128</real>
 				<key>Red Component</key>
-				<real>0.070588238537311554</real>
+				<real>0.12941177189350128</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.45098039507865906</real>
+				<real>0.12038997560739517</real>
 				<key>Green Component</key>
-				<real>0.14509804546833038</real>
+				<real>0.078879080712795258</real>
 				<key>Red Component</key>
-				<real>0.98039215803146362</real>
+				<real>0.718147873878479</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3713659942150116</real>
+				<real>0.22740326821804047</real>
 				<key>Green Component</key>
-				<real>0.87939631938934326</real>
+				<real>0.73019099235534668</real>
 				<key>Red Component</key>
-				<real>0.69346785545349121</real>
+				<real>0.47961589694023132</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.42728197574615479</real>
+				<real>0.18199658393859863</real>
 				<key>Green Component</key>
-				<real>0.94947350025177002</real>
+				<real>0.91622048616409302</real>
 				<key>Red Component</key>
-				<real>0.99927449226379395</real>
+				<real>0.99857872724533081</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.95445334911346436</real>
 				<key>Green Component</key>
-				<real>0.68627452850341797</real>
+				<real>0.64410710334777832</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.32856267690658569</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.73656630516052246</real>
 				<key>Green Component</key>
-				<real>0.52941179275512695</real>
+				<real>0.30266252160072327</real>
 				<key>Red Component</key>
-				<real>0.68627452850341797</real>
+				<real>0.66606861352920532</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99888235330581665</real>
+				<real>0.82006889581680298</real>
 				<key>Green Component</key>
-				<real>0.80626189708709717</real>
+				<real>0.73243516683578491</real>
 				<key>Red Component</key>
-				<real>0.31685584783554077</real>
+				<real>0.14981316030025482</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.84938156604766846</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.84936714172363281</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.8493925929069519</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.13826943933963776</real>
+				<real>0.13958784937858582</real>
 				<key>Green Component</key>
-				<real>0.88415688276290894</real>
+				<real>0.4825465977191925</real>
 				<key>Red Component</key>
-				<real>0.59543848037719727</real>
+				<real>0.27130207419395447</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.37670767307281494</real>
+				<real>0.11582206189632416</real>
 				<key>Green Component</key>
-				<real>0.83169490098953247</real>
+				<real>0.59536725282669067</real>
 				<key>Red Component</key>
-				<real>0.87502807378768921</real>
+				<real>0.96285504102706909</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.81389641761779785</real>
+				<real>0.69954341650009155</real>
 				<key>Green Component</key>
-				<real>0.50178432464599609</real>
+				<real>0.3064875602722168</real>
 				<key>Red Component</key>
-				<real>0.061529088765382767</real>
+				<real>0.07626015692949295</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.53314954042434692</real>
 				<key>Green Component</key>
 				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.52941179275512695</real>
+				<real>0.33559250831604004</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.81416356563568115</real>
+				<real>0.48725795745849609</real>
 				<key>Green Component</key>
-				<real>0.65859752893447876</real>
+				<real>0.44183778762817383</real>
 				<key>Red Component</key>
-				<real>0.26240241527557373</real>
+				<real>0.056145597249269485</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.93608629703521729</real>
 				<key>Green Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.93607044219970703</real>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.93609845638275146</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.33333333333333331</real>
+				<real>0.25882354378700256</real>
 				<key>Green Component</key>
-				<real>0.33333333333333331</real>
+				<real>0.25882354378700256</real>
 				<key>Red Component</key>
-				<real>0.33333333333333331</real>
+				<real>0.25882354378700256</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.61410599946975708</real>
+				<real>0.24844314157962799</real>
 				<key>Green Component</key>
-				<real>0.40106064081192017</real>
+				<real>0.23034398257732391</real>
 				<key>Red Component</key>
-				<real>0.9644390344619751</real>
+				<real>0.90986210107803345</real>
 			</dict>
 			<key>BM Growl</key>
 			<true/>
 			<key>Background Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.070588238537311554</real>
+				<real>0.17263323068618774</real>
+				<key>Color Space</key>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.070588238537311554</real>
+				<real>0.17263594269752502</real>
 				<key>Red Component</key>
-				<real>0.070588238537311554</real>
+				<real>0.17263087630271912</real>
 			</dict>
 			<key>Badge Color</key>
 			<dict>
@@ -5384,11 +5388,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.12038997560739517</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.078879080712795258</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.718147873878479</real>
 			</dict>
 			<key>Bound Hosts</key>
 			<array/>
@@ -5405,11 +5409,11 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.79186719655990601</real>
 				<key>Green Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.6861264705657959</real>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.086931481957435608</real>
 			</dict>
 			<key>Cursor Guide Color</key>
 			<dict>
@@ -5427,11 +5431,11 @@
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.87325412034988403</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.87323933839797974</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.87326544523239136</real>
 			</dict>
 			<key>Custom Command</key>
 			<string>No</string>
@@ -5448,11 +5452,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.89729100465774536</real>
 				<key>Green Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.89727580547332764</real>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.89730262756347656</real>
 			</dict>
 			<key>Guid</key>
 			<string>809C9302-27D0-4AEC-A322-7FDCC989FA1E</string>
@@ -5794,20 +5798,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.23922896385192871</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.23922491073608398</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.23923206329345703</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.87325412034988403</real>
 				<key>Green Component</key>
-				<real>0.8353000283241272</real>
+				<real>0.87323933839797974</real>
 				<key>Red Component</key>
-				<real>0.70980000495910645</real>
+				<real>0.87326544523239136</real>
 			</dict>
 			<key>Send Code When Idle</key>
 			<false/>
@@ -5935,7 +5939,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-01-18T15:58:13Z</date>
+	<date>2018-01-30T14:55:46Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
